# Ascend

AscendC/ascendc/1_utilities/: README.md
AscendC/ascendc/1_utilities/0_printf/: README.md
AscendC/ascendc/1_utilities/2_cpu_debug/: README.md
AscendC/ascendc/1_utilities/4_platform/: README.md
AscendC/ascendc/1_utilities/6_camodel/: README.md
AscendC/ascendc/1_utilities/7_dumptensor/: README.md
AscendC/ascendc/2_features/: README.md
AscendC/ascendc/2_features/0_cplusplus/: README.md
AscendC/ascendc/2_features/10_communicate_compute_fused/: README.md
AscendC/ascendc/2_features/11_matmul_api_custom/: README.md
AscendC/ascendc/2_features/12_cube_group/: CubeGroupCustom.json  README.md
AscendC/ascendc/2_features/13_matmul_api_ibshare/: README.md
AscendC/ascendc/2_features/14_matmul_api_constant/: README.md
AscendC/ascendc/2_features/15_tquebind/: README.md
AscendC/ascendc/2_features/16_group_barrier/: GroupBarrier.json  README.md
AscendC/ascendc/2_features/1_l2cache/: README.md
AscendC/ascendc/2_features/2_tbufpool/: README.md  data_utils.h  run.sh
AscendC/ascendc/2_features/3_memory_reuse/: README.md
AscendC/ascendc/2_features/4_layout/: README.md
AscendC/ascendc/2_features/6_aiv_core_sync/: README.md
AscendC/ascendc/2_features/7_atomicadd/: README.md
AscendC/ascendc/2_features/8_doublebuffer_pipeline/: README.md
AscendC/ascendc/2_features/9_elementwise_operator_template/: README.md
AscendC/ascendc/3_libraries/0_scatter_kernellaunch/: CMakeLists.txt  README.md
AscendC/ascendc/4_best_practices/: README.md
AscendC/ascendc/4_best_practices/10_reducesum/: README.md
AscendC/ascendc/4_best_practices/12_l2_cache_bypass/: README.md  install.sh
AscendC/ascendc/4_best_practices/14_reuse_ab_matrix/: README.md
AscendC/ascendc/4_best_practices/15_mata_address_conflict/: AddsCustom.json  README.md  install.sh
AscendC/ascendc/4_best_practices/16_fixpipe/: README.md
AscendC/ascendc/4_best_practices/17_suitable_layout/: README.md
AscendC/ascendc/4_best_practices/20_matmul_layout/: README.md
AscendC/ascendc/4_best_practices/21_all_gather_matmul_custom/: README.md  all_gather_matmul_custom.json  install.sh
AscendC/ascendc/4_best_practices/21_all_gather_matmul_custom/AclNNInvocation/src/: CMakeLists.txt  common.cpp  main.cpp  op_runner.cpp
AscendC/ascendc/4_best_practices/22_matmul_reduce_scatter_custom/: install.sh
AscendC/ascendc/4_best_practices/23_matmul_all_reduce_custom/: matmul_all_reduce_custom.json
AscendC/ascendc/4_best_practices/3_prompt_flash_attention/: README.md
AscendC/ascendc/4_best_practices/6_group_matmul/: README.md
AscendC/ascendc/4_best_practices/9_vector_operater_pipeline/: README.md
AscendC/ascendc/tutorials/HelloWorldSample/: README.md
AscendC/lesson_01/: README copy.md  README.md
AscendC/lesson_01/0_introduction/: README.md
AscendC/lesson_01/0_introduction/0_helloworld/: main.cpp  run.sh  run_local.sh
AscendC/lesson_01/0_introduction/10_matmul_frameworklaunch/: README.md  install.sh
AscendC/lesson_01/0_introduction/11_matmul_kernellaunch/: README.md
AscendC/lesson_01/0_introduction/14_reduce_frameworklaunch/: README.md  ReduceCustom.json  install.sh
AscendC/lesson_01/0_introduction/15_sub_frameworklaunch/: README.md  SubCustom.json  install.sh
AscendC/lesson_01/0_introduction/16_unaligned_abs_kernellaunch/: README.md
AscendC/lesson_01/0_introduction/17_unaligned_reducemin_kernellaunch/: README.md
AscendC/lesson_01/0_introduction/18_unaligned_wholereduces_frameworklaunch/: README.md  WholeReduceSumCustom.json  install.sh
AscendC/lesson_01/0_introduction/19_unaligned_wholereduces_kernellaunch/: README.md
AscendC/lesson_01/0_introduction/1_add_frameworklaunch/: README.md  install.sh
AscendC/lesson_01/0_introduction/1_add_frameworklaunch/AddCustomTiny/: CMakeLists.txt  README.md  add_custom_host.cpp  add_custom_kernel.cpp  add_custom_tiling.h
AscendC/lesson_01/0_introduction/20_mmad_kernellaunch/: README.md
AscendC/lesson_01/0_introduction/21_vectoradd_kernellaunch/: README.md
AscendC/lesson_01/0_introduction/22_baremix_kernellaunch/: README.md
AscendC/lesson_01/0_introduction/23_static_tensor_programming_kernellaunch/: README.md
AscendC/lesson_01/0_introduction/24_simple_hello_world/: README.md  hello_world.asc
AscendC/lesson_01/0_introduction/25_simple_add/: README.md  add_custom.asc
AscendC/lesson_01/0_introduction/26_simple_matmulleakyrelu/: README.md  matmul_leakyrelu.asc  run.sh
AscendC/lesson_01/0_introduction/27_simple_add_cpp_extensions/: CMakeLists.txt  README.md  add_custom.asc  add_custom_test.py
AscendC/lesson_01/0_introduction/28_simple_add_torch_library/: CMakeLists.txt  README.md  add_custom_test.py
AscendC/lesson_01/0_introduction/2_add_frameworklaunchlite/: README.md  install.sh
AscendC/lesson_01/0_introduction/3_add_kernellaunch/: README.md
AscendC/lesson_01/0_introduction/4_addn_frameworklaunch/: AddnCustom.json  README.md  install.sh
AscendC/lesson_01/0_introduction/5_addn_kernellaunch/: README.md  addn_custom.cpp
AscendC/lesson_01/0_introduction/6_addtemplate_frameworklaunch/: README.md  install.sh
AscendC/lesson_01/0_introduction/7_broadcast_frameworklaunch/: BroadcastCustom.json  README.md  install.sh
AscendC/lesson_01/0_introduction/8_library_frameworklaunch/: README.md
AscendC/lesson_01/0_introduction/8_library_frameworklaunch/static_library/AclNNInvocation/src/: CMakeLists.txt  main.cpp
AscendC/lesson_01/0_introduction/8_library_frameworklaunch/static_library/OpRunner/src/: CMakeLists.txt  common.cpp  op_runner.cpp  operator_desc.cpp
AscendC/lesson_01/0_introduction/9_leakyrelu_frameworklaunch/: LeakyReluCustom.json  README.md  install.sh
AscendC/lesson_01/1_utilities/1_npu_debug/: README.md
AscendC/lesson_01/1_utilities/3_assert/: README.md
AscendC/lesson_01/1_utilities/5_profiling/: README.md
AscendC/lesson_01/3_libraries/: README.md
AscendC/lesson_01/mytest/: CMakeLists.txt  hello_world.asc  helloworld.asc  main.cpp  run.sh  编程范式.asc
AscendC/lesson_01/tutorials/: README.md
(+434 files in other folders)
